# CISC-520-Final-Project

./: .gitignore  README.md  REPORT.md
backend/: .env.example  agent.py  app.py  code_runner.py  main.py  models.py  pyproject.toml  requirements.txt  system_prompt.py  tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChartImage.tsx  ChatInterface.tsx  CodeBlock.tsx  DataTable.tsx  ExamplePrompts.tsx  FileUpload.tsx  MessageBubble.tsx
